tell dzil that lib/Games/Mastermind.pm is in Latin-1

--- a/dist.ini
+++ b/dist.ini
@@ -16,6 +16,10 @@ match    = \.patch$
 match    = mess/.*
 match    = cover_db
 
+[Encoding]
+filename = lib/Games/Mastermind.pm
+encoding = Latin-1
+
 [AutoPrereqs]
 
 [ReportVersions::Tiny]
