--- a/dist.ini
+++ b/dist.ini
@@ -22,7 +22,7 @@ encoding = Latin-1
 
 [AutoPrereqs]
 
-[ReportVersions::Tiny]
+[Test::ReportPrereqs]
 
 [MetaResources]
 repository.web    = http://github.com/book/Games-Mastermind
